# person-following

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .typos.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_person_following.sh
.github/workflows/: lint.yml  release.yml
config/: g1_params.yaml  go2_params.yaml  tron_params.yaml
extrinsics-files/: lidar_camera_extrinsics_g1.yaml  lidar_camera_extrinsics_go2.yaml  lidar_camera_extrinsics_tron.yaml  lidar_camera_extrinsics_tron_usb.yaml
intrinsics-files/: camera_intrinsics_g1.yaml  camera_intrinsics_go2.yaml  camera_intrinsics_tron.yaml  camera_intrinsics_tron_usb.yaml
launch/: go2_greeting_launch.py  greeting_launch.py  person_following_launch.py
om_api/: CMakeLists.txt
om_api/msg/: OMChargingStatus.msg
person_following/: main.py  person_follow_greet.py  person_follow_greet_geofence.py
person_following/controllers/: motion_controller.py
person_following/managers/: geofence_manager.py  model_manager.py
person_following/nodes/: person_follow_greet.py  person_follower.py  person_following_system.py  tracked_person_publisher_ros.py
person_following/utils/: http_server.py  (+5 more)
src/: camera_intrinsics.yaml  clothing_matcher_lab_openclip.py  go2_camera_with_adjustable_publisher.py  lidar_tracker.py  model_manager.py  person_follow_greet.py  person_follow_greet_geofence.py  person_follower.py  person_following_command.py  person_following_system.py  switch_state.py  target_state.py  tracked_person_publisher_ros.py  yolo_detector.py  zenoh_msgs.py
unitree_api/: CMakeLists.txt
(+1 files in other folders)
