[project]
name = "person-following-system"
version = "0.1.0"
description = "Person Following System for NVIDIA Jetson Thor with RealSense and ROS 2"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy<2",
    "pycuda",
    "ultralytics",
    "onnx",
    "onnxruntime",
    "open-clip-torch",
    "boxmot",
    "eclipse-zenoh",
    "pycdr2",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.1.0",
    "pyright>=1.1.406",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.3",
]


[tool.pytest.ini_options]
pythonpath = ["person_following"]
asyncio_mode = "strict"
addopts = "-v"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = ".venv"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["E203", "E501", "D100", "D104", "D200", "D205", "D401", "D404"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["person_following*"]
